2004-05-04  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, plugins/01_mymood.off: Fixed a broken sed command.

	* ChangeLog, nb, plugins/01_mymood.off, plugins/archive/monthly/monthly-cal.sh, plugins/articles.off, plugins/autoformat/moods.sh, plugins/calendar.sh, plugins/fortune.sh, plugins/list_entries.sh, plugins/postformat/tidy.sh:
	Converted sed substitute commands to shorthand for increase in speed.

	* ChangeLog, plugins/autoformat/auto_break.sh:
	Reverted auto formmating back to old behaviour.

2004-05-02  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Tips and Tricks" section of manual.

	* docs/nanoblogger.html:
	Added "Settings and Configuration" section to the manual.

	* default/parts/2004-01.htm, default/parts/archive_links.htm, default/parts/blog_status.htm, default/parts/cal-2004-01.htm, default/parts/cal.htm, default/parts/entry_links.htm, default/parts/fortune.htm, default/parts/month_links.htm, default/parts/news.htm, default/parts/recent_entries.htm, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html:
	Updated default entry.

	* default/atom.xml, default/index.html: Workaround for CVS bugs.

	* ChangeLog, default/atom.xml, default/index.html, default/parts/older_entries.htm:
	Repository update.

2004-05-01  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, default/atom.xml, default/index.html:
	Added missing default directories?

	* ChangeLog, default/parts/cat_1.db.htm, default/parts/category_links.htm, default/parts/news.rdf, default/parts/tidy.html:
	Removed obsolete files from default directory.

	* ChangeLog, default/archives.html, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/atom.xml, default/index.html, default/index.rdf, default/parts/cat_links.htm, default/parts/tidy.htm:
	Updated NanoBlogger's Help entry in default.

	* default/blog.conf, nb:
	- (nb_main): Removed prompt for editor to simplify blog creation.
	- Updated EDITOR comment in blog.conf
