@@ -2,7 +2,7 @@
 <feed version="0.3" xmlns="http://purl.org/atom/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" lang="en">
   <title mode="escaped">My Blog's Title</title>
   <link rel="alternate" type="text/html" href="" />
-  <modified>2004-05-05T22:46:17-04:00</modified>
+  <modified>2004-05-05T23:26:29-04:00</modified>
   <author>
     <name>n1xt3r</name>
     <url></url>
