@@ -56,11 +56,9 @@
             <li>delete an old entry = <code>nb --delete [entry_id]</code></li>
 
             <li>specify a different blog directory = <code>nb --blogdir [blog_dir] [options]</code></li>
-          </ul>Thank you for trying NanoBlogger. Please direct comments and suggestions to the mailing list (<a href=
-          "http://groups.yahoo.com/group/nanoblogger/">groups.yahoo.com/group/nanoblogger/</a>) or submit a bug report to the project
-          page on sourceforge.net (<a href=
-          "http://sourceforge.net/tracker/?atid=635240&amp;group_id=103576&amp;func=browse">sourceforge.net/projects/nanoblogger/</a>).<br />
-
+          </ul>Thank you for trying NanoBlogger. Please direct comments and suggestions to the <a href=
+          "http://groups.yahoo.com/group/nanoblogger/">mailing list</a> or submit a bug report to the <a href=
+          "http://sourceforge.net/tracker/?atid=635240&amp;group_id=103576&amp;func=browse">project page</a> on sourceforge.net.<br />
           <br />
         </div>
 
@@ -237,7 +235,7 @@
     <div class="side">
       Total entries: 1<br />
       Last entry: January 18, 2004 5:12 PM<br />
-      Last updated: May 05, 2004 10:46 PM
+      Last updated: May 05, 2004 11:26 PM
     </div>
 
     <div class="powered">
